Fix word wrap on tweet content

--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -30,8 +30,9 @@ section .tweet:hover {
   width: 60px;
 }
 
-.tweet p {
+.tweet .content {
   font-weight: 600;
+  overflow-wrap: break-word;
 }
 
 hr {
